--- a/templates/grid.html
+++ b/templates/grid.html
@@ -1,7 +1,69 @@
 {% extends "layouts/base.html" %}
 
 {% block body %}
-<div class="container" border-color="white" width="50" height="50" class="d-inline-block align-center" alt="">
+<html>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            _________________________________________________________________________________________________________________
+        </div>
+    </div>
+    <div class ="row">
+        <style>
+            a:visited {
+                color: pink;
+                background-color: transparent;
+                text-decoration: none;
+            }
+        </style>
+        <div class="col-sm" style="font-size:30px;">
+            <a href="/greet">Greet</a>
+        </div>
+        <div class="col-sm" style="font-size:30px;">
+            <a href="/binary">Binary</a>
+        </div>
+        <div class="col-sm" style="font-size:30px;">
+            <a href="/stub">Video/Journal 0</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+            _________________________________________________________________________________________________________________
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm" style="font-size:30px;">
+            <a href="https://docs.google.com/document/d/13bldcvcK0Tj5fnoD3ZBt-I9W8JwUMvsLGsQxQLcwXgM/edit?usp=sharing">Journal</a>
+        </div>
+        <div class="col-sm">
+            One of three columns
+        </div>
+        <div class="col-sm">
+            One of three columns
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+            One of three columns
+        </div>
+        <div class="col-sm">
+            One of three columns
+        </div>
+        <div class="col-sm">
+            One of three columns
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+            One of three columns
+        </div>
+        <div class="col-sm">
+            One of three columns
+        </div>
+        <div class="col-sm">
+            One of three columns
+        </div>
+    </div>
     <div class="row">
         <div class="col-sm">
             One of three columns
@@ -15,3 +77,4 @@
         {% endblock %}
     </div>
 </div>
+</html>
