--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -19,7 +19,7 @@
                     Pages
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/greet">Mini Labs</a>
+                    <a class="dropdown-item" href="/grid">Mini Labs</a>
                     <a class="dropdown-item" href="/binary">Binary</a>
                 </div>
             </li>
