--- a/templates/stub.html
+++ b/templates/stub.html
@@ -1,19 +1,15 @@
 <!-- Extending the predefined project layout -->
 {% extends "layouts/base.html" %}
+{% set project = "Video/Journal 0" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "Stubby" %}
+{% set project = "Video/Journal 0" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
-    <!- Try building a new body here ->
-    <p> Tech Talk 2 </p>
-    <p>Tech Talk 1 - Body Stub</p>
-    <p>Reinhardt</p>
-<br>
-<p>Lotter</p>
+<div class="center-block" style="margin: 10% 30% 10%";>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/xP6kSe0Aay4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 {% endblock %}
 
 <!- This is turning off birds background from base.html -->
-{% block background %}
-{% endblock %}
