--- a/templates/grid.html
+++ b/templates/grid.html
@@ -36,7 +36,7 @@
             <a href="https://docs.google.com/document/d/13bldcvcK0Tj5fnoD3ZBt-I9W8JwUMvsLGsQxQLcwXgM/edit?usp=sharing">Journal</a>
         </div>
         <div class="col-sm">
-            One of three columns
+            <a href=""
         </div>
         <div class="col-sm">
             One of three columns
