--- a/templates/binary.html
+++ b/templates/binary.html
@@ -127,7 +127,7 @@
                     <th>Octal</th>
                     <th>Hexadecimal</th>
                     <th>Decimal</th>
-                    <!-- Hack: display ASCII label for printable character(s)  -->
+                    <!-- Hack: display ASCII labels for printable character(s)  -->
                     <th>Minus</th>
                 </tr>
                 <tr>
