added animation on game page

--- a/templates/Game.html
+++ b/templates/Game.html
@@ -11,6 +11,10 @@
 <!-- Setting up a block replacement to customize background to BIRDS -->
 {% block body %}
 
+    <div class="w3-container">
+        <h1 class="w3-center w3-animate-top">Test your musical knowledge!</h1>
+    </div>
+
     <!DOCTYPE html>
     <html>
     <title>W3.CSS</title>
