--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,7 +7,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <!DOCTYPE HTML>
 <html lang="en">
 
-{% set basename = "Nighthawk Coding" %}
+{% set basename = "Guess the Song" %}
 {% set github = "https://github.com/nighthawkcoders" %}
 {% set twitter = "https://twitter.com/NighthawkCoding" %}
 {% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
@@ -30,12 +30,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             -o-animation: fadein 2s; /* Opera */
             background-image: url("https://docs.google.com/drawings/d/e/2PACX-1vRQ-fJHr5frWNYkTrt-XxVVvpFlDyb15c5hXOAbYWEG_xtO23QkqaaLjylaAQfGDcXK7jb9IPs1rsSU/pub?w=928&h=520");
             color: var(--white);
-
-
         }
-
-
-
 
         .dark-mode {
             background-color: var(--white);
@@ -122,7 +117,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         </div>
     </div>
 
-        <h2>Song Guesser</h2>
+        <h1>Song Guesser</h1>
         <div class="sneaky">
             <audio controls>
                 <source src="/static/assets/MysterySong1.mp3" type="audio/mpeg">
