--- a/templates/grid.html
+++ b/templates/grid.html
@@ -10,10 +10,28 @@
     </div>
     <div class ="row">
         <style>
+            a:link {
+                color: green;
+                background-color: transparent;
+                text-decoration: none;
+            }
+
             a:visited {
                 color: pink;
                 background-color: transparent;
                 text-decoration: none;
+            }
+
+            a:hover {
+                color: red;
+                background-color: transparent;
+                text-decoration: underline;
+            }
+
+            a:active {
+                color: yellow;
+                background-color: transparent;
+                text-decoration: underline;
             }
         </style>
         <div class="col-sm" style="font-size:30px;">
@@ -32,11 +50,36 @@
         </div>
     </div>
     <div class="row">
+        <style>
+            a:link {
+                color: green;
+                background-color: transparent;
+                text-decoration: none;
+            }
+
+            a:visited {
+                color: pink;
+                background-color: transparent;
+                text-decoration: none;
+            }
+
+            a:hover {
+                color: red;
+                background-color: transparent;
+                text-decoration: underline;
+            }
+
+            a:active {
+                color: yellow;
+                background-color: transparent;
+                text-decoration: underline;
+            }
+        </style>
         <div class="col-sm" style="font-size:30px;">
             <a href="https://docs.google.com/document/d/13bldcvcK0Tj5fnoD3ZBt-I9W8JwUMvsLGsQxQLcwXgM/edit?usp=sharing">Journal</a>
         </div>
-        <div class="col-sm">
-            <a href=""
+        <div class="col-sm" style="font-size:30px;">
+            <a href="/wireframes">Wireframes</a>
         </div>
         <div class="col-sm">
             One of three columns
