--- a/templates/concepts.html
+++ b/templates/concepts.html
@@ -23,18 +23,35 @@
         <a href="https://docs.google.com/document/d/13oDynZriMOZLJGRZ1XF9IGquwItVnpF7PiXeV7OK-YM/edit?usp=sharing" >
             <button type="button" class="btn btn-info">Wireframes</button>
         </a>
-         <button type="button" class="btn btn-primary">TPT3</button>
+        <a href="https://www.canva.com/design/DAEpRQB6plI/doJNsQUlj_PvRWA__A1NFQ/view?utm_content=DAEpRQB6plI&utm_campaign=designshare&utm_medium=link&utm_source=viewer" >
+            <button type="button" class="btn btn-info">TPT3</button>
+        </a>
         <div class="container bg-light">
         <div class="col-md-12 text-center">
            </div>
         </div>
     </div>
     </body>
-        <blockquote class="blockquote text-center">
-            <button type="button" class="btn btn-primary">Greet</button>
-            <a href="https://youtu.be/UPD-ODdUVYg" >
-                <button type="button" class="btn btn-info">Video/Journal 0</button>
-            </a>
+
+        <div class="col-md-12 text-center">
+        </div>
+    </div>
+</div>
+    </body>
+    <blockquote class="blockquote text-center">
+    <a href="http://127.0.0.1:5000/sonakshi" >
+        <button type="button" class="btn btn-info">Greet (Our names at the top!)</button>
+    </a>
+    <a href="https://youtu.be/UPD-ODdUVYg" >
+        <button type="button" class="btn btn-info">Video/Journal 0</button>
+    </a>
+
+    </div>
+            </body>
+            </html>
+
+
+
 
 
             </script>
