--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -20,7 +20,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/greet">Greet/About Me</a>
-                    <a class="dropdown-item" href="/binary"></a>
+                    <a class="dropdown-item" href="/binary">bin</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
