Revert "commit test"
This reverts commit ca4f9394b4dfd29aeeb8b88aa963a748f9e8f279.

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -20,7 +20,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/greet">Greet/About Me</a>
-                    <a class="dropdown-item" href="/binary">bin</a>
+                    <a class="dropdown-item" href="/binary">Binary</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -28,7 +28,7 @@
                     Given Examples
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" style="color:red"href="/hawkers/">Hawkers</a>
+                    <a class="dropdown-item" href="/hawkers/">Hawkers</a>
                     <a class="dropdown-item" href="/kangaroos">Kangaroos</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" style="color:blue" href="/walruses/"> Walruses</a>
