--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -28,7 +28,7 @@
                     Given Examples
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" style="color:darkred"href="/hawkers/">Hawkers</a>
+                    <a class="dropdown-item" style="color:red"href="/hawkers/">Hawkers</a>
                     <a class="dropdown-item" href="/kangaroos">Kangaroos</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" style="color:blue" href="/walruses/"> Walruses</a>
