--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="http://nighthawkcodingsociety.com/">
-        <img src="/static/assets/ncs_logo.png" width="50" height="50" class="d-inline-block align-center" alt="">
+        <img src="/static/Sus.jpg" width="50" height="50" class="d-inline-block align-center" alt="">
 
-        Nighthawk Coders
+        The Hackermen
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -16,30 +16,11 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarModel" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    My Personal pages
+                    Pages
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/greet">Greet/About Me</a>
+                    <a class="dropdown-item" href="/grid">Mini Labs</a>
                     <a class="dropdown-item" href="/binary">Binary</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarMaterials" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Given Examples
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/hawkers/">Hawkers</a>
-                    <a class="dropdown-item" href="/kangaroos">Kangaroos</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" style="color:blue" href="/walruses/"> Walruses</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarMaterials" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Mini Lab
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" style="color:blue" href="/binary/"> Binary MiniLab</a>
                 </div>
             </li>
         </ul>
