--- a/templates/grid.html
+++ b/templates/grid.html
@@ -11,7 +11,7 @@
     <div class ="row">
         <style>
             a:link {
-                color: green;
+                color: pink;
                 background-color: transparent;
                 text-decoration: none;
             }
@@ -23,13 +23,13 @@
             }
 
             a:hover {
-                color: red;
+                color: deeppink;
                 background-color: transparent;
                 text-decoration: underline;
             }
 
             a:active {
-                color: yellow;
+                color: hotpink;
                 background-color: transparent;
                 text-decoration: underline;
             }
@@ -52,7 +52,7 @@
     <div class="row">
         <style>
             a:link {
-                color: green;
+                color: pink;
                 background-color: transparent;
                 text-decoration: none;
             }
@@ -64,13 +64,13 @@
             }
 
             a:hover {
-                color: red;
+                color: deeppink;
                 background-color: transparent;
                 text-decoration: underline;
             }
 
             a:active {
-                color: yellow;
+                color: hotpink;
                 background-color: transparent;
                 text-decoration: underline;
             }
@@ -82,42 +82,9 @@
             <a href="/wireframes">Wireframes</a>
         </div>
         <div class="col-sm">
-            One of three columns
+            <a href="">
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm">
-            One of three columns
-        </div>
-        <div class="col-sm">
-            One of three columns
-        </div>
-        <div class="col-sm">
-            One of three columns
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm">
-            One of three columns
-        </div>
-        <div class="col-sm">
-            One of three columns
-        </div>
-        <div class="col-sm">
-            One of three columns
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm">
-            One of three columns
-        </div>
-        <div class="col-sm">
-            One of three columns
-        </div>
-        <div class="col-sm">
-            One of three columns
-        </div>
-        {% endblock %}
-    </div>
+    {% endblock %}
 </div>
 </html>
