--- a/templates/wireframes.html
+++ b/templates/wireframes.html
@@ -12,8 +12,9 @@
     </iframe><br />
 
     <img src="/static/Wireframe%20(2)%20Design-A-Thon.png" target="imgbox" width="280" height="380" style="float:left"></a>
-<img src="/static/Wireframe%20(1).png" target="imgbox" width="700" height="380" style= "margin:0% 5% 0%"></a>
-<img src="/static/Wireframe.png" target="imgbox" width="560" height="380" style="margin: 5% 0% 5%"></a>
+<img src="/static/Wireframe%20(1).png" target="imgbox" width="700" height="380" style= "margin:0% 7% 0%"></a>
+<img src="/static/Wireframe.png" target="imgbox" width="500" height="320" style="margin: 5% 0% 5%"></a>
+<img src="/static/image.png" target="imgbox" width="500" height="320" style="margin: 5% 5% 5%"></a>
 
 
     {% endblock %}
