--- a/templates/about.html
+++ b/templates/about.html
@@ -40,6 +40,11 @@
                 <img src="/static/assets/sonakshi.png" alt="Sonakshi's picture" style="width: 200px; height: 200px;">
                 <p style="text-align: center;"> Sonakshi Bhalla </p>
             </div>
+            <div class="col-sm-2">
+                <img src="/static/assets/saumya.png" alt="Saumya's picture" style="width: 200px; height: 200px;">
+                <p style="text-align: center;"> Saumya Palakodety </p>
+            </div>
+        </div>
         </div>
     </div>
 
