--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -19,7 +19,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
             <a class="nav-link" href={{ url_for('index') }}>Home</a>
             <a class="nav-link" href={{ url_for('walruses') }}>Walruses</a>
-            <a class="nav-link" href={{ url_for('Game') }}>Game</a>
+            <a class="nav-link" href={{ url_for('game') }}>Game</a>
             <!-- stub is shown using the name of the route -->
             <a class="nav-link" href="/stub">Greet</a>
             <a class="nav-link" href="/minilabs">Minilabs</a>
