--- a/templates/grid.html
+++ b/templates/grid.html
@@ -82,7 +82,7 @@
             <a href="/wireframes">Wireframes</a>
         </div>
         <div class="col-sm">
-            <a href="">
+            <a href="https://github.com/Reinhardtlotter/flask_portfolio">GitHub</a>
         </div>
     </div>
     {% endblock %}
