--- a/templates/greet.html
+++ b/templates/greet.html
@@ -14,7 +14,7 @@
     <p style="font-size:30px">Hello {{name}}!</p>
 
         <div class = "col-0">
-            <img src=/static/Hello.gif">
+            <img src=/static/Hello.jpeg">
         </div>
     {% endblock %}
 </div>
