--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -20,7 +20,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/grid">Mini Labs</a>
-                    <a class="dropdown-item" href="/binary">Binary</a>
+                    <a class="dropdown-item" href="/aboutme">About Us</a>
                 </div>
             </li>
         </ul>
