--- a/templates/stub.html
+++ b/templates/stub.html
@@ -7,8 +7,8 @@
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
-<div class="center-block" style="margin: 10% 30% 10%";>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/xP6kSe0Aay4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="center-block" style="margin: 2% 15% 3%";>
+    <iframe width="1000" height=560" src="https://www.youtube.com/embed/xP6kSe0Aay4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 {% endblock %}
 
