--- a/templates/grid.html
+++ b/templates/grid.html
@@ -81,8 +81,8 @@
         <div class="col-sm" style="font-size:30px;">
             <a href="/wireframes">Wireframes</a>
         </div>
-        <div class="col-sm">
-            <a href="https://github.com/Reinhardtlotter/flask_portfolio">GitHub</a>
+        <div class="col-sm" style="font-size:30px;">
+            <a href="https://github.com/Reinhardtlotter/flask_portfolio/issues?q=is%3Aissue+label%3A%22TPT+3%22+is%3Aclosed">TPT3</a>
         </div>
     </div>
     {% endblock %}
