--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,6 @@
 {% extends "layouts/base.html" %}
 
 <!-- Setting up variables to customize "project" details to be specific to index page -->
-{% set project = "Portfolio" %}
-{% set overview = "https://nighthawkcodingsociety.com/projectsearch/details/Flask%20Portfolio%20Starter" %}
-{% set repo = "https://github.com/nighthawkcoders/flask_portfolio/" %}
+{% set project = "The Hackermen" %}
+{% set overview = "https://github.com/Reinhardtlotter/flask_portfolio" %}
 
