--- a/templates/minilabs.html
+++ b/templates/minilabs.html
@@ -3,7 +3,8 @@
 {% set project = "Mini Labs!" %}
 
 {% block body %}
-<head>
+
+    <head>
     <meta charset="UTF-8">
     <title>Minilabs</title>
     <style>
@@ -26,7 +27,9 @@
             color: #000000;
         }
     </style>
-</head>
+
+    </head>
+
 <body>
 <h1>Minilabs!</h1>
     <style>
@@ -43,14 +46,13 @@
 
         #customers td {
             height: 1000px;
+            width: 341px;
 
 
 
         }
 
         #customers tr:nth-child(even){background-color: #f2f2f2;}
-
-        #customers tr:hover {background-color: #ddd;}
 
         #customers th {
             padding-top: 12px;
@@ -60,8 +62,7 @@
             color: white;
         }
     </style>
-    </head>
-    <body>
+    </body>
 
     <table id="customers">
         <tr>
@@ -71,7 +72,7 @@
         </tr>
         <tr>
             <td><h5>Brainwrite</h5>
-                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 1000px; width: 500px;">
+                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 1000px; width: 341px;">
 
                 </iframe>
                 </p>
@@ -79,9 +80,9 @@
             <td>
                 <h5>TPT 3</h5>
                 <p>Bria and Riya Notes:
-                <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vSbmTrt7xooVOz4h3BAmaAlxBWGtSzVA-5v7imjbpahEL3Rc-hratmHPbgEqk9mY8tyf2A6svB7T8j5/pub?embedded=true" style="height: 1000px; width: 500px;"></iframe>
+                <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vSbmTrt7xooVOz4h3BAmaAlxBWGtSzVA-5v7imjbpahEL3Rc-hratmHPbgEqk9mY8tyf2A6svB7T8j5/pub?embedded=true" style="height: 1000px; width: 341px;"></iframe>
                 <br>Sreeja and Valerie Notes:
-                <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vRgcZNbe9sQyeiPsYqwrzWnK1bhED-aJqZkTkTLPh0h-BfdHC9Y6mVE2UTUEx7MVw7VTChv0K08h6rU/pub?embedded=true" style="height: 1000px; width: 500px;"></iframe>
+                <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vRgcZNbe9sQyeiPsYqwrzWnK1bhED-aJqZkTkTLPh0h-BfdHC9Y6mVE2UTUEx7MVw7VTChv0K08h6rU/pub?embedded=true" style="height: 1000px; width: 341px;"></iframe>
                 </p>
             </td>
             <td>Wireframes
@@ -110,17 +111,17 @@
                             <input type="submit" value="Greetings!">
                         </form>
                     </div>
-
+                </div>
             </td>
-            <td>Christina Berglund</td>
-            <td>Sweden</td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
             <td>
                 <h5>Journal 1 w/ Bria, Riya, and Valerie</h5>
-                <p><iframe width="853" height="480" src="https://www.youtube.com/embed/kJKbsoaUph4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <p><iframe width="341" height="480" src="https://www.youtube.com/embed/kJKbsoaUph4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
                 <h5>Journal 1 w/ Sreeja</h5>
-                <p><iframe src="https://drive.google.com/file/d/1Uf12yLFhXtC_HFMGwKqBH7PbBZqHDk0P/preview" width="640" height="480" allow="autoplay"></iframe></p>
+                <p><iframe src="https://drive.google.com/file/d/1Uf12yLFhXtC_HFMGwKqBH7PbBZqHDk0P/preview" width="341" height="480" allow="autoplay"></iframe></p>
             </td>
             <td></td>
             <td></td>
