added basic text on my about page

--- a/templates/riya.html
+++ b/templates/riya.html
@@ -3,12 +3,18 @@
 {% set project = "Riya" %}
 
 {% block body %}
+    <div class="w3-container">
+        <h1 class="w3-center w3-animate-top">hi i'm Riya!</h1>
+    </div>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+<div class="w3-container w3-sand">
+    <h2>a little about me</h2>
+    <p> hello! I'm Riya and I am a junior! </p>
+</div>
 </body>
 {% endblock %}
 
