--- a/templates/stub.html
+++ b/templates/stub.html
@@ -6,6 +6,9 @@
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
+    <div class="w3-container">
+        <h1 class="w3-center w3-animate-right"> !</h1>
+    </div>
     <!- Try building a new body here ->
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
 
