updated read.me tab and updated the format of the minilabs page

--- a/templates/minilabs.html
+++ b/templates/minilabs.html
@@ -3,32 +3,37 @@
 {% set project = "Mini Labs!" %}
 
 {% block body %}
-<head>
-    <meta charset="UTF-8">
-    <title>Minilabs</title>
-    <style>
-        body {
-            background: #a2cf9f;
-        }
+    <head>
 
-        .sneaky {
-            width: 20%;
-            top: 50%;
-            position: relative;
-            left: 40%;
-            border-bottom: 5px #000000;
-            overflow: hidden;
-            animation: animate 5s linear forwards;
-        }
+        <head>
+            <meta charset="UTF-8">
+            <title>Minilabs</title>
+            <style>
+                body {
+                    background: #a2cf9f;
+                }
+
+                .sneaky {
+                    width: 20%;
+                    top: 50%;
+                    position: relative;
+                    left: 40%;
+                    border-bottom: 5px #000000;
+                    overflow: hidden;
+                    animation: animate 5s linear forwards;
+                }
 
 
-        .sneaky h1 {
-            color: #000000;
-        }
-    </style>
-</head>
-<body>
-<h1>Minilabs!</h1>
+                .sneaky h1 {
+                    color: #000000;
+                }
+            </style>
+        </head>
+
+    </head>
+
+    <body>
+    <h1>Minilabs!</h1>
     <style>
         #customers {
             font-family: Cambria, sans-serif;
@@ -43,6 +48,7 @@
 
         #customers td {
             height: 1000px;
+            width: 341px;
 
 
 
@@ -50,7 +56,7 @@
 
         #customers tr:nth-child(even){background-color: #f2f2f2;}
 
-        #customers tr:hover {background-color: #ddd;}
+        #customers tr:hover {background-color: #5aa158;}
 
         #customers th {
             padding-top: 12px;
@@ -62,6 +68,7 @@
     </style>
     </head>
     <body>
+    </body>
 
     <table id="customers">
         <tr>
@@ -71,7 +78,8 @@
         </tr>
         <tr>
             <td><h5>Brainwrite</h5>
-                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 1000px; width: 500px;">
+                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 1000px; width: 341px;">
+                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 1000px; width: 341px;">
 
                 </iframe>
                 </p>
@@ -79,9 +87,11 @@
             <td>
                 <h5>TPT 3</h5>
                 <p>Bria and Riya Notes:
-                <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vSbmTrt7xooVOz4h3BAmaAlxBWGtSzVA-5v7imjbpahEL3Rc-hratmHPbgEqk9mY8tyf2A6svB7T8j5/pub?embedded=true" style="height: 1000px; width: 500px;"></iframe>
-                <br>Sreeja and Valerie Notes:
-                <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vRgcZNbe9sQyeiPsYqwrzWnK1bhED-aJqZkTkTLPh0h-BfdHC9Y6mVE2UTUEx7MVw7VTChv0K08h6rU/pub?embedded=true" style="height: 1000px; width: 500px;"></iframe>
+                    <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vSbmTrt7xooVOz4h3BAmaAlxBWGtSzVA-5v7imjbpahEL3Rc-hratmHPbgEqk9mY8tyf2A6svB7T8j5/pub?embedded=true" style="height: 1000px; width: 341px;"></iframe>
+                    <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vSbmTrt7xooVOz4h3BAmaAlxBWGtSzVA-5v7imjbpahEL3Rc-hratmHPbgEqk9mY8tyf2A6svB7T8j5/pub?embedded=true" style="height: 1000px; width: 341px;"></iframe>
+                    <br>Sreeja and Valerie Notes:
+                    <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vRgcZNbe9sQyeiPsYqwrzWnK1bhED-aJqZkTkTLPh0h-BfdHC9Y6mVE2UTUEx7MVw7VTChv0K08h6rU/pub?embedded=true" style="height: 1000px; width: 341px;"></iframe>
+                    <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vRgcZNbe9sQyeiPsYqwrzWnK1bhED-aJqZkTkTLPh0h-BfdHC9Y6mVE2UTUEx7MVw7VTChv0K08h6rU/pub?embedded=true" style="height: 1000px; width: 341px;"></iframe>
                 </p>
             </td>
             <td>Wireframes
@@ -111,24 +121,30 @@
                         </form>
                     </div>
 
+                </div>
             </td>
             <td>Christina Berglund</td>
             <td>Sweden</td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
             <td>
                 <h5>Journal 1 w/ Bria, Riya, and Valerie</h5>
-                <p><iframe width="853" height="480" src="https://www.youtube.com/embed/kJKbsoaUph4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <p><iframe width="341" height="480" src="https://www.youtube.com/embed/kJKbsoaUph4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <p><iframe width="341" height="480" src="https://www.youtube.com/embed/kJKbsoaUph4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
                 <h5>Journal 1 w/ Sreeja</h5>
-                <p><iframe src="https://drive.google.com/file/d/1Uf12yLFhXtC_HFMGwKqBH7PbBZqHDk0P/preview" width="640" height="480" allow="autoplay"></iframe></p>
+                <p><iframe src="https://drive.google.com/file/d/1Uf12yLFhXtC_HFMGwKqBH7PbBZqHDk0P/preview" width="341" height="480" allow="autoplay"></iframe></p>
+                <p><iframe src="https://drive.google.com/file/d/1Uf12yLFhXtC_HFMGwKqBH7PbBZqHDk0P/preview" width="341" height="480" allow="autoplay"></iframe></p>
             </td>
             <td></td>
             <td></td>
         </tr>
     </table>
-</body>
+    </body>
 {% endblock %}
 
 <!- This is turning off birds background from base.html -->
 {% block background %}
 {% endblock %}
+
