--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -12,7 +12,7 @@
 </iframe><br />
 
 <img src="/static/Screen%20Shot%202021-09-10%20at%205.53.48%20PM.png" target="imgbox" width="280" height="380" style="float:left"></a>
-<img src="/static/Screen%20Shot%202021-09-10%20at%205.55.55%20PM.png" target="imgbox" width=280 height="380" style="margin: 0% 3% 0%"></a>
+<img src="/static/Screen%20Shot%202021-09-10%20at%205.55.55%20PM.png" target="imgbox" width="280" height="380" style="margin: 0% 3% 0%"></a>
 <img src="/static/Screen%20Shot%202021-09-10%20at%206.07.07%20PM.png" target="imgbox" width="280" height="380"></a>
 <img src="/static/picur.png" target="imgbox" width="280" height="380"style="margin: 0% 3% 0%"></a>
 </div>
