--- a/templates/grid.html
+++ b/templates/grid.html
@@ -84,7 +84,41 @@
         <div class="col-sm" style="font-size:30px;">
             <a href="https://github.com/Reinhardtlotter/flask_portfolio/issues?q=is%3Aissue+label%3A%22TPT+3%22+is%3Aclosed">TPT3</a>
         </div>
-    </div>
+        </div>
+        <div class="row">
+            <div class="col-sm">
+                _________________________________________________________________________________________________________________
+            </div>
+        </div>
+    <div class="row">
+        <style>
+            a:link {
+                color: pink;
+                background-color: transparent;
+                text-decoration: none;
+            }
+
+            a:visited {
+                color: pink;
+                background-color: transparent;
+                text-decoration: none;
+            }
+
+            a:hover {
+                color: deeppink;
+                background-color: transparent;
+                text-decoration: underline;
+            }
+
+            a:active {
+                color: hotpink;
+                background-color: transparent;
+                text-decoration: underline;
+            }
+        </style>
+        <div class="col-sm" style="font-size:30px;">
+            <a href="https://www.youtube.com/watch?v=4PBT40bsTYw&list=PLqQJAW1jlFX_KScLv7LZFcHH2t_uYb4Vn&index=3">Week 3 Video</a>
+        </div>
     {% endblock %}
 </div>
 </html>
