--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="http://nighthawkcodingsociety.com/">
+    <a class="navbar-brand" href="/aboutme">
         <img src="/static/Sus.jpg" width="50" height="50" class="d-inline-block align-center" alt="">
 
         The Hackermen
