--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -12,9 +12,6 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('home') }}>Home</a>
             <a class="nav-link" href={{ url_for('binary') }}>Binary</a>
             <a class="nav-link" href={{ url_for('about') }}>About</a>
-            <a class="nav-link" href={{ url_for('sonakshi') }}>Sonakshi</a>
-            <a class="nav-link" href={{ url_for('saumya') }}>Saumya</a>`
-            <a class="nav-link" href={{ url_for('kashish') }}>Kashish</a>
             <a class="nav-link" href={{ url_for('concepts') }}>Concepts</a>
             <a class="nav-link" href="/stub">Stub</a>
 
@@ -39,12 +36,28 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Antartica</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Europe</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Australia</a></li>
+                       </ul>
+    <div class="container">
+                <div class="dropdown">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Greet
+                        <span class="caret"></span></button>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Saumya</a></li>
+                        <a href="http://127.0.0.1:5000/saumya" >
+                            <button type="button" class="btn btn-info">Saumya's Greet</button>
+                        </a>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sonakshi</a></li>
+                        <a href="http://127.0.0.1:5000/sonakshi" >
+                            <button type="button" class="btn btn-info">Sonakshi's Greet</button>
+                        </a>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kashish</a></li>
+                        <a href="http://127.0.0.1:5000/kashish" >
+                            <button type="button" class="btn btn-info">Kashish's Greet</button>
+                        </a>
                     </ul>
                 </div>
-            </div>
-            </body>
-            </html>
-
+                </body>
+                </html>
 
             <!-- stub is shown using the name of the route -->
         </div>
