--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -24,7 +24,25 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             </head>
             <body>
 
-            <div class="container">
+
+                <div class="dropdown">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Greet
+                        <span class="caret"></span></button>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                        <li role="presentation"><a role="menuitem" tabindex="-1"
+                            <a href="http://127.0.0.1:5000/saumya" >
+                                <button type="button" class="btn btn-info">Saumya's Greet</button>
+                            </a>
+                        <li role="presentation"><a role="menuitem" tabindex="-1"
+                            <a href="http://127.0.0.1:5000/sonakshi" >
+                                <button type="button" class="btn btn-info">Sonakshi's Greet</button>
+                            </a>
+                        <li role="presentation"><a role="menuitem" tabindex="-1"
+                            <a href="http://127.0.0.1:5000/kashish" >
+                                <button type="button" class="btn btn-info">Kashish's Greet</button>
+                            </a>
+                    </ul>
+
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Continents
                         <span class="caret"></span></button>
@@ -37,29 +55,9 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Europe</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Australia</a></li>
                        </ul>
-    <div class="container">
-                <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Greet
-                        <span class="caret"></span></button>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Saumya</a></li>
-                        <a href="http://127.0.0.1:5000/saumya" >
-                            <button type="button" class="btn btn-info">Saumya's Greet</button>
-                        </a>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sonakshi</a></li>
-                        <a href="http://127.0.0.1:5000/sonakshi" >
-                            <button type="button" class="btn btn-info">Sonakshi's Greet</button>
-                        </a>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kashish</a></li>
-                        <a href="http://127.0.0.1:5000/kashish" >
-                            <button type="button" class="btn btn-info">Kashish's Greet</button>
-                        </a>
-                    </ul>
-                </div>
                 </body>
                 </html>
 
             <!-- stub is shown using the name of the route -->
-        </div>
     </div>
 </nav>
