--- a/templates/grid.html
+++ b/templates/grid.html
@@ -117,7 +117,7 @@
             }
         </style>
         <div class="col-sm" style="font-size:30px;">
-            <a href="https://www.youtube.com/watch?v=4PBT40bsTYw&list=PLqQJAW1jlFX_KScLv7LZFcHH2t_uYb4Vn&index=3">Week 3 Video</a>
+            <a href="/week3">Week 3 Video</a>
         </div>
     {% endblock %}
 </div>
