updated the read.me

--- a/templates/bria.html
+++ b/templates/bria.html
@@ -10,9 +10,13 @@
 </head>
 
 <body>
-<h1>Hello World!</h1>
+<h1>Hi my name is Bria!</h1>
+<p>I love photography! Here are some of my favorite photos I've taken</p>
 <iframe src="https://drive.google.com/file/d/1d2vt7aKy8Efi-Ipwh5zjENWGikupKA14/preview" width="640" height="480" allow="autoplay"> </iframe>
-<p>This page has a light blue background color!</p>
+<p>I also love yearbook and graphic design<br>
+    I also love hanging out with my friends Aleezay, Ella, Ashika, and Riya.
+
+</p>
 
 </body>
 {% endblock %}
