--- a/templates/concepts.html
+++ b/templates/concepts.html
@@ -40,7 +40,7 @@
     </body>
     <blockquote class="blockquote text-center">
     <a href="http://127.0.0.1:5000/sonakshi" >
-        <button type="button" class="btn btn-info">Greet (Our names at the top!)</button>
+        <button type="button" class="btn btn-info">Greet</button>
     </a>
     <a href="https://youtu.be/UPD-ODdUVYg" >
         <button type="button" class="btn btn-info">Video/Journal 0</button>
