new buttons that lead to the play html; want to add separate pages for each level of difficulty; also added to my individual page

--- a/templates/bria.html
+++ b/templates/bria.html
@@ -17,7 +17,13 @@
     I also love hanging out with my friends Aleezay, Ella, Ashika, and Riya.
 
 </p>
+<img id="myImage" src="/static/assets/bria's%20pic.png" height="640" width="480">
 
+
+<script>
+    document.getElementById("myImage").src = "/static/assets/bria's%20pic.png";
+
+</script>
 </body>
 {% endblock %}
 
