added basic text on my about page

--- a/templates/riya.html
+++ b/templates/riya.html
@@ -6,15 +6,27 @@
     <div class="w3-container">
         <h1 class="w3-center w3-animate-top">hi i'm Riya!</h1>
     </div>
-<head>
+    <title>W3.CSS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <body>
+    <div class="w3-container w3-sand">
+        <h2>a little about me</h2>
+        <p> hello! I'm Riya and I am a junior! Some of my favorite things to do are hang out with my friends, watch movies and play board games! One of the most random things I love to do is to solve an escape room - in real life or on a game :) I love marvel, harry potter and disney :) In the future, I would love to travel to Thailand, or Africa : those are the places I want to go the most! Here is a piture of me and my friend Aleezay at Disneyland! I'm on the right :) </p>
+    </div>
+    <img src="/static/assets/riya pic.jpg" class="w3-round" alt="Norway">
+
+    <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+
 </head>
 <body>
-<div class="w3-container w3-sand">
-    <h2>a little about me</h2>
-    <p> hello! I'm Riya and I am a junior! </p>
-</div>
+
+
+</body>
+</html>
 </body>
 {% endblock %}
 
