--- a/templates/game.html
+++ b/templates/game.html
@@ -55,9 +55,9 @@
         }
 
     </style>
-    <a class="button button1" href="/game/play">Easy (25 sec)</a>
-    <a class="button button2" href="/game/play">Medium (15 sec)</a>
-    <a class="button button3" href="/game/play">Hard (8 sec)</a>
+    <a class="button button1" href="/game/easy">Easy (25 sec)</a>
+    <a class="button button2" href="/game/medium">Medium (15 sec)</a>
+    <a class="button button3" href="/game/hard">Hard (8 sec)</a>
 
 
     <form>
