added rudimentary but quite functional timer mechanism

--- a/templates/valerie.html
+++ b/templates/valerie.html
@@ -5,10 +5,23 @@
 {% block body %}
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>about valerie</title>
 </head>
 <body>
-
+    <p>
+        <div id="hoverText">
+            <span title="This was on purpose, to be funny. I hope it worked.">Hi, my name is Valerie, and I'm a positive_adjectives[random.randint(len(positive_adjectives)] learner and worker!</span>
+        </div>
+    </p>
+    <p>
+        I'm in AP Computer Science Principles, which hopefully you're aware of as my teacher.
+    </p>
+    <p>
+        When I'm older, I want to work with the Computer.
+    </p>
+    <p>
+        I hope this About Me page sated your hunger for technical innovation.
+    </p>
 </body>
 {% endblock %}
 
