--- a/templates/game.html
+++ b/templates/game.html
@@ -18,9 +18,11 @@
     <!DOCTYPE html>
     <html>
     <head>
-    <title>W3.CSS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <title>W3.CSS</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     </head>
     <body>
@@ -55,10 +57,22 @@
         }
 
     </style>
-    <a class="button button1" href="/game/easy">Easy (25 sec)</a>
-    <a class="button button2" href="/game/medium">Medium (15 sec)</a>
-    <a class="button button3" href="/game/hard">Hard (8 sec)</a>
+    <a class="button button1" href="/templates/game/easy">Easy (25 sec)</a>
+    <a class="button button2" href="/templates/game/medium">Medium (15 sec)</a>
+    <a class="button button3" href="/templates/game/hard">Hard (8 sec)</a>
 
+        <div id="timer">
+            <span id="hours">00:</span>
+            <span id="mins">00:</span>
+            <span id="seconds">00</span>
+        </div>
+        <div id="controls">
+            <button id="start">Start</button>
+            <button id="stop">Stop</button>
+            <button id="reset">Reset</button>
+        </div>
+
+    <script src="/static/timer.js"></script>
 
     <form>
         </a><br>
