--- a/templates/wireframes.html
+++ b/templates/wireframes.html
@@ -10,11 +10,24 @@
 <div class="col-0" style="margin: 3% 5% 5%" name="imgbox" id="imgbox;>
     <iframe width="1920" height="1080">
     </iframe><br />
-
-    <img src="/static/Wireframe%20(2)%20Design-A-Thon.png" target="imgbox" width="280" height="380" style="float:left"></a>
-<img src="/static/Wireframe%20(1).png" target="imgbox" width="700" height="380" style= "margin:0% 6% 0%"></a>
-<img src="/static/Wireframe.png" target="imgbox" width="500" height="320" style="margin: 5% 0% 5%"></a>
-<img src="/static/image.png" target="imgbox" width="500" height="320" style="margin: 5% 5% 5%"></a>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="/static/Wireframe%20(2)%20Design-A-Thon.png" target="imgbox" width="280" height="380" style="float:left"></a>
+            </div>
+            <div class="col">
+                <img src="/static/Wireframe%20(1).png" target="imgbox" width="700" height="380" style= "float:right"></a>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="/static/Wireframe.png" target="imgbox" width="100%" height="100%" style="margin:0% -3% 0%"></a>
+                </div>
+                <div class="col">
+                    <img src="/static/image.png" target="imgbox" width="100%" height="100%" style= "margin:0% 3% 0%"></a>
+                </div>
+            </div>
 
 
     {% endblock %}
