--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -10,30 +10,69 @@
 <div class="col-0" style="margin: 3% 5% 2%" name="imgbox" id="imgbox;>
     <iframe width="1920" height="1080">
 </iframe><br />
-
-<img src="/static/Screen%20Shot%202021-09-10%20at%205.53.48%20PM.png" target="imgbox" width="20%" height="380" style="float:left"></a>
-<img src="/static/Screen%20Shot%202021-09-10%20at%205.55.55%20PM.png" target="imgbox" width="20%" height="380" style="margin: 0% 3% 0%"></a>
-<img src="/static/Screen%20Shot%202021-09-10%20at%206.07.07%20PM.png" target="imgbox" width="20%" height="380"></a>
-<img src="/static/picur.png" target="imgbox" width="20%" height="380"style="margin: 0% 3% 0%"></a>
-</div>
-<div>
-    <a class ="col-1" style="margin:0% 4% 0% ;font-size: 30px; color: pink">Derrick Huang</a>
-    <a class ="col-1" style="margin:0% 1% 0% ;font-size: 30px; color: pink">Brian Zhang</a>
-    <a class ="col-1" style="margin:0% 7% 0% ;font-size: 30px; color: pink">Reinhardt Lotter</a>
-    <a class ="col-1" style="margin:0% -2.8% 0% ;font-size: 30px; color: pink">Nathan Manangan</a>
-    <div>
-        <a class ="col-1" style="margin:0% 4% 0%">Age:14</a>
-        <a class ="col-1" style="margin:0% 10.5% 0%">Age:15</a>
-        <a class ="col-1" style="margin:0% 5% 0%">Age:15</a>
-        <a class ="col-1" style="margin:0% 10% 0%">Age:15</a>
-        <div>
-            <a class ="col-1" style="margin:0% 4% 0%">Fun Fact: Likes to swim</a>
-            <a class ="col-1" style="margin:0% 2.2% 0%">Fun Fact: Allergic to cats</a>
-            <a class ="col-1" style="margin:0% 4.4% 0%">Fun Fact: Gymnast for 12 years</a>
-            <a class ="col-1" style="margin:0% -1.5% 0%">Fun Fact: Allergic to seafood</a>
+<table class="table">
+    <thead>
+    <tr>
+        <div class="content_img">
+            <img src='/static/Screen%20Shot%202021-09-10%20at%205.55.55%20PM.png' width='100%' height='125%'>
+            <div>Brian Zhang: 15 years old and allergic to cats </div>
         </div>
-    </div>
-</div>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <div class="content_img">
+            <img src='/static/picur.png' width='100%' height='125%'>
+            <div>Nathan Manangan: 15 years old and allergic to seafood </div>
+        </div>
+    </tr>
+    <tr>
+        <div class="content_img">
+            <img src='/static/Screen%20Shot%202021-09-10%20at%205.53.48%20PM.png' width='100%' height='125%'>
+            <div>Derrick Huang: 15 years old and likes to swim </div>
+        </div>
+    </tr>
+    <tr>
+        <div class="content_img">
+            <img src='/static/Screen%20Shot%202021-09-10%20at%206.07.07%20PM.png' width='100%' height='125%'>
+            <div>Reinhardt Lotter: 15 years old and has been a gymnast for 12 years</div>
+        </div>
+    </tr>
+    </tbody>
+</table>
+    <style>/* Parent Container */
+    .content_img{
+        position: relative;
+        width: 200px;
+        height: 200px;
+        float: left;
+        margin-right: 10px;
+    }
 
+    /* Child Text Container */
+    .content_img div{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        background: black;
+        color: white;
+        margin-bottom: 5px;
+        font-family: sans-serif;
+        opacity: 0;
+        visibility: hidden;
+        -webkit-transition: visibility 0s, opacity 0.5s linear;
+        transition: visibility 0s, opacity 0.5s linear;
+    }
 
+    /* Hover on Parent Container */
+    .content_img:hover{
+        cursor: pointer;
+    }
+
+    .content_img:hover div{
+        width: 150px;
+        padding: 8px 15px;
+        visibility: visible;
+        opacity: 0.7;
+    }</style>
 {% endblock %}
