--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -14,7 +14,7 @@
     <thead>
     <tr>
         <div class="content_img">
-            <img src='/static/Screen%20Shot%202021-09-10%20at%205.55.55%20PM.png' width='100%' height='125%'>
+            <img src='/static/Screen%20Shot%202021-09-10%20at%205.55.55%20PM.png' width='150%' height='200%' style="margin: 0% 0% 0%">
             <div>Brian Zhang: 15 years old and allergic to cats </div>
         </div>
     </tr>
@@ -22,19 +22,19 @@
     <tbody>
     <tr>
         <div class="content_img">
-            <img src='/static/picur.png' width='100%' height='125%'>
+            <img src='/static/picur.png' width='150%' height='200%' style="margin: 0% 55% 0%">
             <div>Nathan Manangan: 15 years old and allergic to seafood </div>
         </div>
     </tr>
     <tr>
         <div class="content_img">
-            <img src='/static/Screen%20Shot%202021-09-10%20at%205.53.48%20PM.png' width='100%' height='125%'>
+            <img src='/static/Screen%20Shot%202021-09-10%20at%205.53.48%20PM.png' width='150%' height='200%' style="margin: 0% 110% 0%">
             <div>Derrick Huang: 15 years old and likes to swim </div>
         </div>
     </tr>
     <tr>
         <div class="content_img">
-            <img src='/static/Screen%20Shot%202021-09-10%20at%206.07.07%20PM.png' width='100%' height='125%'>
+            <img src='/static/Screen%20Shot%202021-09-10%20at%206.07.07%20PM.png' width='150%' height='200%' style="margin: 0% 165% 0%">
             <div>Reinhardt Lotter: 15 years old and has been a gymnast for 12 years</div>
         </div>
     </tr>
